--- a/FaithConnect/Views/Home/Index.cshtml
+++ b/FaithConnect/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
                         <button class="options-button">...</button>
                         <div class="options-menu">
                             <a href="#">Hide Post</a>
-                            <a href="#">Leave group</a>
+                            <a href="#">Save post</a>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                     <button class="action-button"><span class="input-icon-addon"><i class="fas fa-retweet"></i></span> Repost</button>
                 </div>
                 <div class="post-interact">
-                    <img src="@profileImage" alt="User Icon" class="user-icon">
+                    <img src="@profileImage" alt="Avatar" class="user-icon" style="width: 45px; height: 45px; object-fit: cover">
                     <input type="text" placeholder="Interact as @User.Identity.Name" class="comment-input">
                 </div>
             </div>
