--- a/FaithConnect/Views/Home/GroupDetail.cshtml
+++ b/FaithConnect/Views/Home/GroupDetail.cshtml
@@ -1,27 +1,39 @@
 ﻿@model FaithConnect.ViewModel.GroupDetailViewModel
-
 @{
     ViewBag.Title = Model.Group.groupName;
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    var memberCount = Model.GroupMemberships.Count(m => m.groupId == Model.Group.id && m.status == 1);
+    var currentUserId = ViewBag.CurrentUserId;
 }
 
 <link rel="stylesheet" href="~/Assets/Groups/css/GroupDetail.css" />
-
-<div class="container mt-4">
+<div class="container-fluid mt-4">
     <div class="row">
         <div class="col-12">
+            <!-- Group Banner Section -->
             <div class="group-header" style="position: relative;">
-                <img src="~/Assets/Groups/img/group-header.jpg" alt="Group header" class="img-fluid">
-                <div class="group-info" style="position: absolute; bottom: 10px; left: 20px;">
+                <img src="~/Assets/Groups/img/group-header.jpg" alt="Group Header" class="img-fluid group-banner">
+                <div class="group-info" style="position: absolute; bottom: 30px; left: 30px; color: white;">
                     <h2>@Model.Group.groupName</h2>
-                    <p>100 members</p>
-                    <button class="btn btn-success">Join Group</button>
+                    <p>@memberCount members</p>
+                    <!-- If the logged-in user is the group admin, show the "Edit Group" button -->
+                    @if (Model.Group.groupAdmin == currentUserId)
+                    {
+                        <a href="@Url.Action("EditGroup", "Group", new { id = Model.Group.id })" class="btn btn-custom">Edit Group</a>
+                    }
+                    else
+                    {
+                        <!-- If the user is not the admin, show the "Join Group" button -->
+                        <button class="btn btn-custom">Join Group</button>
+                    }
                 </div>
             </div>
         </div>
     </div>
 
-    <ul class="nav nav-tabs mt-3">
+    <!-- Navigation Tabs -->
+    <ul class="nav nav-tabs mt-3 group-navigation">
         <li class="nav-item">
             <a class="nav-link active" data-toggle="tab" href="#content">Contents</a>
         </li>
@@ -33,92 +45,43 @@
         </li>
     </ul>
 
-    <div class="tab-content">
-        <div class="tab-pane container active" id="content">
-            <!-- Content posts go here -->
+    <div class="tab-content row mt-4">
+        <!-- Left Section: Posts -->
+        <div class="tab-pane container active col-lg-8" id="content">
             @foreach (var post in Model.Posts)
             {
                 <div class="card mt-3">
                     <div class="card-body">
-                        <div class="d-flex align-items-center">
-                            @*<img src="~/Assets/Users/img/@post.UserAccount.profilePicture" alt="@post.UserAccount.username" class="rounded-circle" style="width: 50px; height: 50px;">*@
-                            <div class="ml-3">
-                                <h5>@post.UserAccount.username <small class="text-muted">(@post.UserAccount.role)</small></h5>
-                                <p class="text-muted">@post.date_created?.ToString("MMMM dd, yyyy")</p>
-                            </div>
-                        </div>
-                        <p class="mt-3">@post.content</p>
-                        @if (post.Media.Any())
-                        {
-                            @*<img src="~/Assets/Posts/@post.Media.First().url" alt="Post image" class="img-fluid">*@
-                        }
-                        <div class="mt-3">
-                            <button class="btn btn-link">Like</button>
-                            <button class="btn btn-link">Interact</button>
-                            <button class="btn btn-link">Repost</button>
-                        </div>
+                        <h5>@post.UserAccount.username <small class="text-muted">(@post.UserAccount.role)</small></h5>
+                        <p class="text-muted">@post.date_created?.ToString("MMMM dd, yyyy")</p>
+                        <p>@post.content</p>
                     </div>
                 </div>
             }
         </div>
 
-        <div class="tab-pane container fade" id="events">
-            <!-- Events go here -->
-            @foreach (var ev in Model.Events)
-            {
-                <div class="card mt-3">
-                    <div class="card-body">
-                        <h5>@ev.title</h5>
-                        <p>@ev.description</p>
-                        <p><strong>Date:</strong> @ev.event_date?.ToString("MMMM dd, yyyy")</p>
-                    </div>
-                </div>
-            }
-        </div>
-
-        <div class="tab-pane container fade" id="forums">
-            <!-- Forums go here -->
-            @foreach (var forum in Model.Forums)
-            {
-                <div class="card mt-3">
-                    <div class="card-body">
-                        <div class="d-flex align-items-center">
-                            @*<img src="~/Assets/Users/img/@forum.UserAccount.profilePicture" alt="@forum.UserAccount.username" class="rounded-circle" style="width: 50px; height: 50px;">*@
-                            <div class="ml-3">
-                                @*<h5>@forum.UserAccount.username <small class="text-muted">(@forum.UserAccount.role)</small></h5>*@
-                                <p class="text-muted">@forum.date_created?.ToString("MMMM dd, yyyy")</p>
-                            </div>
+        <!-- Right Section: Upcoming Events -->
+        @*<div class="col-lg-4">
+            <div class="upcoming-events">
+                <h4>Upcoming Events:</h4>
+                @foreach (var event in Model.Events)
+                {
+                    <div class="event d-flex mb-3">
+                        <div class="event-date p-2 text-center" style="background-color: #e9ecef; border-radius: 5px;">
+                            <h5>@event.Date.ToString("ddd")</h5>
+                            <span>@event.Date.Day</span>
                         </div>
-                        <p class="mt-3">@forum.content</p>
-                        <div class="mt-3">
-                            <button class="btn btn-link">Like</button>
-                            <button class="btn btn-link">Interact</button>
+                        <div class="event-details p-2 ml-2">
+                            <h5>@event.Title</h5>
+                            <p>@event.Description</p>
                         </div>
                     </div>
-                </div>
-            }
-        </div>
-    </div>
-
-    <div class="row mt-3">
-        <div class="col-12 col-md-4 offset-md-8">
-            <div class="card">
-                <div class="card-body">
-                    <h5>Upcoming Events:</h5>
-                    @foreach (var ev in Model.Events)
-                    {
-                        <div class="d-flex justify-content-between mt-2">
-                            <div>
-                                <p class="mb-0">@ev.title</p>
-                                <small class="text-muted">@ev.event_date?.ToString("dddd, MMMM dd")</small>
-                            </div>
-                        </div>
-                    }
-                </div>
+                            }
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJTY5KVphtPhzWj9WO1clHTMGaEkaGQ2J95JCzy/8p3ylzTEi" crossorigin="anonymous"></script>
