--- a/FaithConnect/Views/Admin/ManageGroups.cshtml
+++ b/FaithConnect/Views/Admin/ManageGroups.cshtml
@@ -29,7 +29,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="description">Group Admin</label>
+                                <label for="description">Group Admin(ID number)</label>
                                 <div class="input-icon">
                                     <span class="input-icon-addon"><i class="fa fa-user"></i></span>
                                     <input type="number" class="form-control" id="description" name="groupAdmin" placeholder="Group Admin" required>
