--- a/FaithConnect/Views/Shared/_Layout.cshtml
+++ b/FaithConnect/Views/Shared/_Layout.cshtml
@@ -148,7 +148,7 @@
                                 </a>
                             </li>
                             <li class="my-2 p-1">
-                                <a href="#" class="text-decoration-none text-dark d-flex align-items-center">
+                                <a href="~/Home/MyCalendar" class="text-decoration-none text-dark d-flex align-items-center">
                                     <div class="rounded-circle bg-gray p-1 d-flex align-items-center justify-content-center me-3" style="width: 38px; height: 38px">
                                         <i class="fas fa-book"></i>
                                     </div>
