--- a/FaithConnect/Assets/Groups/css/GroupDetail.css
+++ b/FaithConnect/Assets/Groups/css/GroupDetail.css
@@ -21,26 +21,50 @@
 .group-navigation ul {
     list-style: none;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     background-color: #f7f6f3;
-    padding: 10px;
+    padding: 5px;
     margin: 0;
+    border-radius: 10px;
 }
 
 .group-navigation ul li {
     margin: 0 20px;
 }
 
+.group-navigation ul li a:hover {
+    color: #d6c4a7;  /* Text color changes on hover */
+}
+
+
+
 .group-navigation ul li a {
-    color: #333;
+    color: inherit;
     text-decoration: none;
     padding: 10px 20px;
     display: block;
+    transition: border-bottom 0.3s ease;  /* Smooth transition for border */
 }
 
-.group-navigation ul li.active a {
-    border-bottom: 2px solid #d6c4a7;
+.group-navigation ul li a.active {
+    color: #d6c4a7;
+    border-bottom: 2px solid #333;  /* Keeps the underline on active */
 }
+
+.group-navigation ul li a:focus {
+    outline: none;  /* Remove default focus outline */
+    border-bottom: 2px solid #333;
+}
+
+
+
+
+.group-navigation ul li.active a {
+    border-bottom: 2px solid #333;
+    color: #d6c4a7;
+}
+
+
 
 .upcoming-events {
     background-color: #f7f6f3;
